New post working

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -5,4 +5,4 @@
     </div>
 </div>
 
-<button [routerLink]="['/blog/new']">Nouveau Poste</button>
+<button [routerLink]="['/new']">Nouveau Poste</button>
