Moved post files to the server side

--- a/src/app/blog/post/post.component.html
+++ b/src/app/blog/post/post.component.html
@@ -1,6 +1,6 @@
 <div class="post" *ngIf="post">
     <p>{{ post.time }}</p>
-    <button (click)="fetchPost()">{{ post.name }}</button>
+    <button (click)="fetchPost()">{{ post.title }}</button>
     <div *ngIf="contentShown">
         <div *ngIf="content | async as c">
             <span [innerHTML]="marked.parse(c)"></span>
