--- a/src/app/blog/post/post.component.css
+++ b/src/app/blog/post/post.component.css
@@ -1,6 +1,9 @@
 .post {
     margin-top: 40px;
     text-align: center;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .post button {
