--- a/src/app/blog/post/post.component.css
+++ b/src/app/blog/post/post.component.css
@@ -1,12 +1,20 @@
 .post {
     margin-top: 40px;
-    text-align: center;
+    text-align: left;
     width: 70%;
     margin-left: auto;
     margin-right: auto;
 }
 
-.post button {
-    width: 20%;
+.postCrown {
+  text-align: center;
+}
+
+.postCrown button {
+    width: 30%;
     height: 40px;
+}
+
+.deleteButton {
+  text-align: right;
 }
