--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -5,4 +5,4 @@
     </div>
 </div>
 
-<button [routerLink]="['/new']">Nouveau Poste</button>
+<button class="newPost" [routerLink]="['/new']">Nouveau Poste</button>
