--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,11 @@
     <h1>Laurent</h1>
     <h4>Développeur full-stack</h4>
     <p>C++ | Python | Qt | Angular | Node.js</p>
-    <a [routerLink]="['/']">Accueil</a>
-    <a [routerLink]="['/blog']">Blog</a>
-    <a [routerLink]="['/projets']">Projets</a>
+    <div class="headerLinks">
+      <a [routerLink]="['/']">Accueil</a>|
+      <a [routerLink]="['/blog']">Blog</a>|
+      <a [routerLink]="['/projets']">Projets</a>
+    </div>
   </div>
   <div class="icons">
     <a href="https://twitter.com/0x248f">
