--- a/src/app/projects/project/project.component.css
+++ b/src/app/projects/project/project.component.css
@@ -1,16 +1,28 @@
 .project {
   display: inline-flex;
   flex-direction: column;
+
   margin: 100px 20px;
   padding: 0px 50px;
-}
 
-.project a {
-  text-decoration: none;
-  color: rgb(0, 174, 255);
+  height: 700px;
+  width: 500px;
 }
 
 .project img {
   height: 500px;
   width: auto;
+  max-width: 500px;
+}
+
+.projectName {
+  display: inline-flex;
+  flex-direction: row;
+  align-content: center;
+}
+
+.projectName img {
+  margin: 32px 8px;
+  height: 16px;
+  width: 16px;
 }
