Add a login service to the UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
       <img src="/assets/Github Mark.png" alt="Github" />
     </a>
   </div>
+  <a class="login" [routerLink]="['/login']">login</a>
 </div>
 <div class="spacer"></div>
 
