--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,5 @@
 .header {
     display: flex;
-    align-content: center;
     justify-content: center;
     height: 200px;
 }
@@ -11,6 +10,7 @@
     width: 150px;
     border-radius: 50%;
     align-self: center;
+    margin-left: auto;
 }
 
 @font-face {
@@ -57,12 +57,18 @@
     display: flex;
     flex-direction: column;
     margin-top: 20px;
-    margin-right: 118px;
+    margin-right: auto;
 }
 
 .icons img {
     width: 32px;
     height: 32px;
+}
+
+.login {
+  text-decoration: none;
+  color: #000;
+  align-self: flex-start;
 }
 
 .spacer {
