--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     </p>
     <p>
         J'ai passé trois belles années à Sherbrooke. L'une pour finir mon diplôme en science pure,
-        l'autre à Sherbrooke où j'ai appris l'électricité et à utiliser un Arduino. Ensuite,
+        les autres à l'Université de Sherbrooke où j'ai appris l'électricité et à utiliser un Arduino. Ensuite,
         j'ai eu une introduction plus formelles aux bases de données relationnelles. Durant
         ma dernière session là-bas, j'ai programmé un site d'échange en ligne en Java et React
         avec trois autres personnes. J'avais déjà utilisé React, alors je l'ai intégré au projet.
