--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -67,8 +67,12 @@
     font-size: 42px;
   }
 
-  .headerText h3 {
-    font-size: 18px;
+  .headerText h4 {
+    font-size: 14px;
+  }
+
+  .headerText p {
+    font-size: 10px;
   }
 
   .headerLinks a {
