--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     height: 200px;
+    color: #dcdccc;
+    background-color: #3f3f3f;
 }
 
 .header img {
@@ -47,7 +49,7 @@
 
 .headerLinks a {
     font-family: Arial;
-    color: black;
+    color: #fff;
     text-decoration: none;
     padding: 0px 16px;
     font-size: 20px;
@@ -95,7 +97,7 @@
 
 .login {
   text-decoration: none;
-  color: #000;
+  color: #fff;
   align-self: flex-start;
 }
 
@@ -109,9 +111,10 @@
 .routerOutlet {
   position: absolute;
   overflow: scroll;
-  top: 210px;
+  top: 202px;
   bottom: 0px;
-  width: 98%;
+  width: 100%;
+  background-color: red;
 }
 
 @media (max-width: 640px) {
