--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,20 +27,20 @@
 }
 
 .headerText h1 {
-    font-family: Monego;
-    font-size: 72px;
-    margin: 0px 20px;
+  font-family: Monego;
+  font-size: 72px;
+  margin: 0px 20px;
 }
 
 .headerText h4 {
-    font-family: Monego;
-    font-size: 24px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+  font-family: Monego;
+  font-size: 24px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .headerText p {
-    margin-top: 0px;
+  margin-top: 0px;
 }
 
 .headerLinks {
@@ -48,23 +48,23 @@
 }
 
 .headerLinks a {
-    font-family: Arial;
-    color: #fff;
-    text-decoration: none;
-    padding: 0px 16px;
-    font-size: 20px;
+  font-family: Arial;
+  color: #fff;
+  text-decoration: none;
+  padding: 0px 16px;
+  font-size: 20px;
 }
 
 .icons {
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
-    margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-right: auto;
 }
 
 .icons img {
-    width: 32px;
-    height: 32px;
+  width: 32px;
+  height: 32px;
 }
 
 .login {
@@ -86,5 +86,6 @@
   top: 202px;
   bottom: 0px;
   width: 100%;
-  background-color: red;
+  background-color: #3f3f3f;
+  color: #dcdccc;
 }
