--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -1,3 +1,7 @@
 .posts {
-  background-color: green;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(46, 98, 114);
+  min-height: 100%;
+  height: auto;
 }
