--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,9 @@
 .contentText {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin-left: 15%;
   height: 100%;
-  background-color: #3f3f3f;
-  color: #dcdccc;
 }
 
 .contentText h2 {
