--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -75,7 +75,7 @@
 
 .spacer {
     display: block;
-    background-color: darkgray;
+    background-color: gray;
     height: 2px;
     width: 100%;
 }
