--- a/src/app/projects/project/project.component.css
+++ b/src/app/projects/project/project.component.css
@@ -2,11 +2,14 @@
   display: inline-flex;
   flex-direction: column;
 
-  margin: 100px 20px;
+  margin: 50px 20px;
   padding: 0px 50px;
 
   height: 700px;
   width: 500px;
+
+  background-color: #792611;
+  border-radius: 20px;
 }
 
 .project img {
