Change logos to light versions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   </div>
   <div class="icons">
     <a href="https://twitter.com/0x248f">
-      <img src="/assets/Twitter Logo.svg" alt="Twitter" />
+      <img src="/assets/Twitter Logo.png" alt="Twitter" />
     </a>
     <a href="https://github.com/0x248f">
       <img src="/assets/Github Mark.png" alt="Github" />
