--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -3,6 +3,7 @@
   flex-flow: row wrap;
   justify-content: space-around;
   width: 100%;
+  height: 100%;
   margin: auto;
   background-color: rgb(87, 41, 87);
 }
