--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,10 @@
     </div>
   </div>
   <div class="icons">
-    <a href="https://twitter.com/0x248f">
+    <a href="https://twitter.com/collfrog">
       <img src="/assets/Twitter Logo.png" alt="Twitter" />
     </a>
-    <a href="https://github.com/0x248f">
+    <a href="https://github.com/colfrog">
       <img src="/assets/Github Mark.png" alt="Github" />
     </a>
   </div>
