--- a/src/app/projects/project/project.component.css
+++ b/src/app/projects/project/project.component.css
@@ -6,9 +6,9 @@
   padding: 0px 50px;
 
   min-height: 500px;
-  width: 40vw;
+  width: 500px;
 
-  background-color: #117968;
+  background-color: #11794e;
   border-radius: 20px;
 }
 
